kubernetes/apps/code-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/part-of: homelab
